--- a/narrekap-theme/style.css
+++ b/narrekap-theme/style.css
@@ -13,9 +13,6 @@ License URI: https://github.com/mjaveld/narrekap-theater?tab=GPL-3.0-1-ov-file#r
 Text Domain: narrekap
 Tags: block-patterns, full-site-editing
 */
- 
-@import "modern-normalize.min.css";
-@import "resets.css";
 
 :root{
     /* https://coolors.co/f0ead6-e5e1d4-b084cc-665687-190933 */
@@ -35,20 +32,36 @@ Tags: block-patterns, full-site-editing
     --bg-block: rgb(from white r g b);
 }
 
-#test{    
+#header-banner {
+    --grid-block-amount: 10;
+    position: relative;
     min-height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(var(--grid-block-amount), [col-start] 1fr [col-end]);
+    grid-template-rows: repeat(var(--grid-block-amount), [row-start] 1fr [row-end]);
+}
+
+#header-banner #banner-soon-text{
+    position: absolute;
+    grid-area: 3 / 3
+}
+
+#header-banner #banner-show-title{
+    position: absolute;
+    grid-area: 4 / 3
+}
+
+#header-banner #banner-show-img-poster{
+    position: absolute;
+    grid-area: 2 / 7
+}
+
+#header-banner #banner-show-cta-button{
+    position: absolute;
+    grid-area: 6 / 3
 }
 
 body {
-    /* display: grid;
-    grid: 
-    [header-start] "header header header" auto [header-end]
-    [nav-start] "nav nav nav" auto [nav-end]
-    [block-one-start] ". block-one ." auto [block-one-end]
-    [block-two-start] ". block-two ." auto [block-two-end]
-    [footer-start] "footer footer footer" auto [footer-end]
-    / 80px 1fr 80px; */
-    row-gap: 20px;
     background-color: var(--bg-main);
 }
 
@@ -56,9 +69,9 @@ main{
     grid-area: header;
     display: grid;
     grid:
-    [header-banner-start] "header-banner header-banner header-banner" auto [header-banner-end]
-    [header-content-start] ". header-content ." auto [header-content-end]
-    / 80px 1fr 80px;
+    [header-banner-start] "header-banner header-banner header-banner header-banner header-banner" auto [header-banner-end]
+    [header-content-start] ". nav-track . header-content ." auto [header-content-end]
+    / 120px auto 16px 1fr 200px;
     row-gap: 20px;
 }
 
@@ -73,9 +86,144 @@ main #header-content{
 
 nav {
     grid-area: nav;
+    position: sticky;
+    top: 0;
     background-color: var(--bg-nav);
     color: var(--clr-nav);
     padding: 20px 0;
+}
+
+#header-hover{
+    z-index: 1;
+    grid-area: 1 / 2;
+    position: sticky;
+    top: 120px;
+    height: min-content;
+    background-color: var(--bg-nav);
+}
+
+.header-hover-logo{
+    display: inline-block;
+    height: 64px;
+    width: 64px;
+}
+
+.menu {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-button-container {
+    display: block;
+    cursor: pointer;
+    height: 20px;
+    width: 30px;
+    margin: auto;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.menu-button{    
+    margin-top: 8px;
+}
+
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+    display: block;
+    background-color: #fff;
+    position: absolute;
+    height: 4px;
+    width: 30px;
+    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border-radius: 2px;
+}
+
+.menu-button::before {
+    content: '';
+    margin-top: -8px;
+}
+
+.menu-button::after {
+    content: '';
+    margin-top: 8px;
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::before {
+    margin-top: 0px;
+    transform: rotate(405deg);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button {
+    background: rgba(255, 255, 255, 0);
+}
+
+#menu-toggle:checked + .menu-button-container .menu-button::after {
+    margin-top: 0px;
+    transform: rotate(-405deg);
+}
+
+#menu-toggle ~ .menu li {
+    overflow: hidden;
+    height: 0;
+    transition: 400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+#menu-toggle:checked ~ .menu li {
+    overflow: unset;
+    height: 2.5em;
+    transition: 400ms cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.testing{
+    grid-area: 5 / 3;
+}
+
+#hm-toggle{
+    /* display: none; */
+}
+
+#hm-label{
+
+}
+
+#hm-icon{
+
+}
+
+.hamburger-menu {
+    width: 40px;
+    height: 30px;
+    position: relative;
+    cursor: pointer;
+}
+
+/* Bars styles */
+.bar {
+    width: 100%;
+    height: 6px;
+    background-color: #000;
+    border-radius: 3px;
+    position: absolute;
+    transition: all 0.3s ease;
+}
+
+/* Positioning the bars */
+.top {
+    top: 0; 
+}
+
+.middle {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.bottom {
+    bottom: 0;
 }
 
 nav a{
