WIP transfering to classic theme

--- a/narrekap-theme/style.css
+++ b/narrekap-theme/style.css
@@ -11,7 +11,7 @@ Version: 1.0
 License: GPL-3.0 license
 License URI: https://github.com/mjaveld/narrekap-theater?tab=GPL-3.0-1-ov-file#readme
 Text Domain: narrekap
-Tags: block-patterns, full-site-editing
+Tags:
 */
 
 :root{
